# AI-Supply-Chain

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  pyproject.toml  railway.toml
apps/api/app/: main.py  models.py  schemas.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: ai.py  auth.py  dashboard.py  forecast.py  health.py  ingestion.py  inventory.py  logistics.py  maintenance.py  reports.py  suppliers.py
apps/api/app/core/: config.py  database.py  deps.py
apps/api/app/scripts/: seed_demo.py
apps/api/app/services/: ai.py  analytics.py  forecasting.py  integration.py  seed.py
apps/api/tests/: test_health.py  test_ingestion.py  test_services.py
apps/web/: .env.local.example  next.config.ts  package.json  proxy.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/web/__tests__/: app-shell.test.tsx
apps/web/app/: globals.css  icon.tsx  layout.tsx  page.tsx  providers.tsx
apps/web/app/admin/: page.tsx
apps/web/app/assistant/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/forecasting/: page.tsx
apps/web/components/: admin-console.tsx  app-shell.tsx  assistant-panel.tsx  charts.tsx  dashboard-overview.tsx  forecast-studio.tsx  inventory-workbench.tsx  tables.tsx
apps/web/lib/: api.ts  server-api.ts
apps/worker/: .env.example  Dockerfile  pyproject.toml  railway.toml
apps/worker/worker/: config.py  enqueue.py  jobs.py  main.py
docs/: architecture.md  deployment.md
(+11 files in other folders)
