[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "supplychain-api"
version = "0.1.0"
description = "Supply chain optimization API"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.15.2",
  "fastapi>=0.133.0",
  "google-genai>=1.30.0",
  "httpx>=0.28.1",
  "numpy>=2.2.4",
  "openai>=1.75.0",
  "pandas>=2.2.3",
  "psycopg[binary]>=3.2.6",
  "pydantic-settings>=2.8.1",
  "python-multipart>=0.0.20",
  "redis>=5.2.1",
  "scikit-learn>=1.6.1",
  "shap>=0.47.1",
  "sqlalchemy>=2.0.39",
  "statsmodels>=0.14.4",
  "uvicorn[standard]>=0.34.0",
  "xgboost>=2.1.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.3",
  "ruff>=0.11.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
